@@ -13,6 +13,7 @@ Changes for 1.5:
 
 Changes for 1.4.2:
 
+ - support of new parameter for count(period,value,operator) (Alexei)
  - new trigger function iregexp(), non case-sensitive regexp (Alexei) 
  - fixed upgrade script to correctly process host-template linkage (Alexei)
  - fixed synchronisation of delete operation between nodes (Alexei)
